Update dtype conversion
* Add int64 -> int32/int16/int8 downcasting (wherever supported)
* Refactor dtype conversion code to improve modularity

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,7 +36,7 @@ Homepage = "https://github.com/synaptics-torq/torq-tools"
 Issues = "https://github.com/synaptics-torq/torq-tools/issues"
 
 [project.scripts]
-torq-convert-fp32  = "torq.tools.convert_fp32:main"
+torq-convert-dtype = "torq.tools.convert_dtype.__main__:main"
 torq-compile-model = "torq.compile:main"
 torq-export-model  = "torq.models.export_model:main"
 torq-infer-model   = "torq.models.infer_model:main"
